@@ -30,159 +30,191 @@
 #include "wgx.h"
 
 /**
- * @brief Masks bitmaps.
- * @param[in] hBMSrc handle to the bitmap.
- * @param[in] crTransparent transparent color. If set to
- * (COLORREF)-1 the color of pixel 0/0 of the image is used.
- * @return Handle of the created bitmap,
- * NULL indicates failure.
- * @note Based on an example at
- * http://forum.pellesc.de/index.php?topic=3265.0
+ * @internal
+ * @brief Copies one bitmap to another.
+ * @param[in] hBmpDst the destination bitmap.
+ * @param[in] hBmpSrc the source bitmap.
+ * @param[in] flags the flags passed to
+ * the BitBlt routine.
  */
-HBITMAP WgxCreateMenuBitmapMasked(HBITMAP hBMSrc, COLORREF crTransparent)
+static void WgxCopyBitmap(HBITMAP hBmpDest,HBITMAP hBmpSrc,DWORD flags)
 {
-    HDC hDCMem = NULL, hDCMem2 = NULL, hDCDst1 = NULL;
+    HDC hDC = NULL, hDC2 = NULL;
+    HBITMAP hOldBmp, hOldBmp2;
     BITMAP bm = {0};
-    HBITMAP hBMDst1 = NULL;
-    HBITMAP hBMDst2 = NULL;
-    HBITMAP hBMMask = NULL;
-    RECT rc = {0};
-
-    GetObject(hBMSrc, sizeof(bm), &bm);
-
-    hDCMem = CreateCompatibleDC(NULL);
-    if(hDCMem == NULL) return NULL;
-
-    hDCMem2 = CreateCompatibleDC(NULL);
-    if(hDCMem2 == NULL){
-        DeleteDC(hDCMem);
-        return NULL;
+    
+    /* create device contexts */
+    hDC = CreateCompatibleDC(NULL);
+    hDC2 = CreateCompatibleDC(NULL);
+    
+    /* copy bitmap */
+    if(hDC && hDC2){
+        GetObject(hBmpSrc,sizeof(bm),&bm);
+        hOldBmp = SelectObject(hDC,hBmpSrc);
+        hOldBmp2 = SelectObject(hDC2,hBmpDest);
+        BitBlt(hDC2,0,0,bm.bmWidth,bm.bmHeight,hDC,0,0,flags);
+        SelectObject(hDC,hOldBmp);
+        SelectObject(hDC2,hOldBmp2);
     }
-
-    hBMDst1 = CreateBitmap(bm.bmWidth, bm.bmHeight, bm.bmPlanes, bm.bmBitsPixel, NULL);    // new bitmap
-    hBMDst2 = CreateBitmap(bm.bmWidth, bm.bmHeight, bm.bmPlanes, bm.bmBitsPixel, NULL);    // copy bitmap
-    hBMMask = CreateBitmap(bm.bmWidth, bm.bmHeight, 1, 1, NULL); // mask bitmap
-    // make copy of source bitmap
-    SelectObject(hDCMem, hBMSrc);      // source
-    SelectObject(hDCMem2, hBMDst2);    // target
-    BitBlt(hDCMem2, 0, 0, bm.bmWidth, bm.bmHeight, hDCMem, 0, 0, SRCCOPY);    //
-    DeleteDC(hDCMem);    // free source
-    DeleteDC(hDCMem2);
-    // make masks
-
-    hDCMem = CreateCompatibleDC(NULL);
-    if(hDCMem == NULL){
-        DeleteObject(hBMDst1);
-        DeleteObject(hBMDst2);
-        DeleteObject(hBMMask);
-        return NULL;
-    }
-
-    hDCMem2 = CreateCompatibleDC(NULL);
-    if(hDCMem2 == NULL){
-        DeleteDC(hDCMem);
-        DeleteObject(hBMDst1);
-        DeleteObject(hBMDst2);
-        DeleteObject(hBMMask);
-        return NULL;
-    }
-
-    SelectObject(hDCMem, hBMDst2);
-    SelectObject(hDCMem2, hBMMask);
-    /* get color from pixel 0/0, if transparent color is not set */
-    if(crTransparent == (COLORREF)-1)
-        SetBkColor(hDCMem, GetPixel(hDCMem, 0, 0));
-    else
-        SetBkColor(hDCMem, crTransparent);
-
-    BitBlt(hDCMem2, 0, 0, bm.bmWidth, bm.bmHeight, hDCMem, 0, 0, SRCCOPY);
-    BitBlt(hDCMem, 0, 0, bm.bmWidth, bm.bmHeight, hDCMem2, 0, 0, SRCINVERT);
-    DeleteDC(hDCMem);
-    DeleteDC(hDCMem2);
-
-    rc.top = rc.left = 0;
-    rc.right = bm.bmWidth;
-    rc.bottom = bm.bmHeight;
-
-    hDCMem = CreateCompatibleDC(NULL);
-    if(hDCMem == NULL){
-        DeleteObject(hBMDst1);
-        DeleteObject(hBMDst2);
-        DeleteObject(hBMMask);
-        return NULL;
-    }
-
-    hDCDst1 = CreateCompatibleDC(NULL);
-    if(hDCDst1 == NULL){
-        DeleteDC(hDCMem);
-        DeleteObject(hBMDst1);
-        DeleteObject(hBMDst2);
-        DeleteObject(hBMMask);
-        return NULL;
-    }
-
-    SelectObject(hDCDst1, hBMDst1);
-    FillRect(hDCDst1, &rc, GetSysColorBrush(COLOR_MENU));
-
-    SelectObject(hDCMem, hBMMask);
-    BitBlt(hDCDst1, 0, 0, bm.bmWidth, bm.bmHeight, hDCMem, 0, 0, SRCAND);
-    SelectObject(hDCMem, hBMDst2);
-    BitBlt(hDCDst1, 0, 0, bm.bmWidth, bm.bmHeight, hDCMem, 0, 0, SRCPAINT);
-    DeleteDC(hDCMem);
-    DeleteDC(hDCDst1);
-
-    DeleteObject(hBMDst2);
-    DeleteObject(hBMMask);
-    return hBMDst1;
+    
+    /* cleanup */
+    if(hDC) DeleteDC(hDC);
+    if(hDC2) DeleteDC(hDC2);
 }
 
 /**
  * @internal
- * @brief Extracts menu bitmaps from toolbar bitmaps.
- * @param[in] hBMSrc handle to the toolbar bitmap.
- * @param[in] nPos position of menu bitmap.
+ * @brief Fills bitmap by specified color.
+ */
+static void WgxFillBitmap(HBITMAP hBitmap,HBRUSH hBrush)
+{
+    BITMAP bm = {0};
+    HBITMAP hOldBmp;
+    HDC hDC;
+    RECT rc;
+    
+    hDC = CreateCompatibleDC(NULL);
+    if(hDC){
+        GetObject(hBitmap,sizeof(bm),&bm);
+        rc.top = rc.left = 0;
+        rc.right = bm.bmWidth;
+        rc.bottom = bm.bmHeight;
+        hOldBmp = SelectObject(hDC,hBitmap);
+        FillRect(hDC,&rc,hBrush);
+        SelectObject(hDC,hOldBmp);
+        DeleteDC(hDC);
+    }
+}
+
+/**
+ * @brief Prepares bitmap for use in menu.
+ * @param[in] hBitmap handle to the bitmap.
+ * @param[in] crTransparent transparent color. If set to
+ * (COLORREF)-1 the color of pixel 0/0 of the image is used.
+ * @return Handle of the created bitmap, NULL indicates failure.
+ * @note Based on an example at
+ * http://forum.pellesc.de/index.php?topic=3265.0
+ */
+HBITMAP WgxCreateMenuBitmapMasked(HBITMAP hBitmap,COLORREF crTransparent)
+{
+    HDC hDC = NULL, hDC2 = NULL;
+    HBITMAP hOldBmp, hOldBmp2;
+    HBITMAP hNewBitmap = NULL;
+    HBITMAP hMask1 = NULL;
+    HBITMAP hMask2 = NULL;
+    BITMAP bm = {0};
+
+    /* create device contexts */
+    hDC = CreateCompatibleDC(NULL);
+    hDC2 = CreateCompatibleDC(NULL);
+    if(hDC == NULL || hDC2 == NULL)
+        goto fail;
+    
+    /* create bitmaps */
+    GetObject(hBitmap,sizeof(bm),&bm);
+    hNewBitmap = CreateBitmap(bm.bmWidth,bm.bmHeight,bm.bmPlanes,bm.bmBitsPixel,NULL);
+    hMask1 = CreateBitmap(bm.bmWidth,bm.bmHeight,bm.bmPlanes,bm.bmBitsPixel,NULL);
+    hMask2 = CreateBitmap(bm.bmWidth,bm.bmHeight,1,1,NULL);
+    
+    /* make copy of source bitmap */
+    WgxCopyBitmap(hMask1,hBitmap,SRCCOPY);
+
+    /* make masks */
+    hOldBmp = SelectObject(hDC,hMask1);
+    hOldBmp2 = SelectObject(hDC2,hMask2);
+    
+    /* get color from pixel 0/0, if transparent color is not set */
+    if(crTransparent == (COLORREF)-1)
+        SetBkColor(hDC,GetPixel(hDC,0,0));
+    else
+        SetBkColor(hDC,crTransparent);
+
+    BitBlt(hDC2,0,0,bm.bmWidth,bm.bmHeight,hDC,0,0,SRCCOPY);
+    BitBlt(hDC,0,0,bm.bmWidth,bm.bmHeight,hDC2,0,0,SRCINVERT);
+    
+    SelectObject(hDC,hOldBmp);
+    SelectObject(hDC2,hOldBmp2);
+
+    /* combine them all together */
+    WgxFillBitmap(hNewBitmap,GetSysColorBrush(COLOR_MENU));
+    WgxCopyBitmap(hNewBitmap,hMask2,SRCAND);
+    WgxCopyBitmap(hNewBitmap,hMask1,SRCPAINT);
+
+    DeleteObject(hMask1);
+    DeleteObject(hMask2);
+    return hNewBitmap;
+    
+fail:
+    if(hDC) DeleteDC(hDC);
+    if(hDC2) DeleteDC(hDC2);
+    if(hMask1) DeleteObject(hMask1);
+    if(hMask2) DeleteObject(hMask2);
+    if(hNewBitmap) DeleteObject(hNewBitmap);
+    return NULL;
+}
+
+/**
+ * @internal
+ * @brief Creates menu item bitmap
+ * by cutting off a part of the
+ * specified bitmap.
+ * @details The bitmap passed in
+ * must contain series of pictures
+ * placed sequentially one after
+ * another. The second parameter
+ * defines index of picture in series.
  * @return Handle of the created bitmap,
  * NULL indicates failure.
  * @note Based on an example at
  * http://forum.pellesc.de/index.php?topic=3265.0
  */
-HBITMAP WgxGetToolbarBitmapForMenu(HBITMAP hBMSrc, int nPos)
+static HBITMAP WgxGetBitmapForMenuItem(HBITMAP hBitmap,int i)
 {
-    HDC hDCSrc = NULL, hDCDst = NULL;
+    HDC hDC = NULL, hDC2 = NULL;
+    HBITMAP hOldBmp, hOldBmp2;
+    HBITMAP hNewBitmap = NULL;
     BITMAP bm = {0};
-    HBITMAP hBMDst = NULL, hOldBmp = NULL;
     int cx, cy;
 
+    /* get dimensions of menu check mark */
     cx = GetSystemMetrics(SM_CXMENUCHECK);
     cy = GetSystemMetrics(SM_CYMENUCHECK);
     
-    if ((hDCSrc = CreateCompatibleDC(NULL)) != NULL) {
-        if ((hDCDst = CreateCompatibleDC(NULL)) != NULL) {
-            SelectObject(hDCSrc, hBMSrc);
-            GetObject(hBMSrc, sizeof(bm), &bm);
-            hBMDst = CreateBitmap(cx, cy, bm.bmPlanes, bm.bmBitsPixel, NULL);
-            if (hBMDst) {
-                hOldBmp = SelectObject(hDCDst, hBMDst);
-                StretchBlt(hDCDst, 0, 0, cx, cy, hDCSrc, nPos*bm.bmHeight, 0, bm.bmHeight, bm.bmHeight, SRCCOPY);
-                SelectObject(hDCDst, hOldBmp);
-                GetObject(hBMDst, sizeof(bm), &bm);
-            }
-            DeleteDC(hDCDst);
+    /* create device contexts */
+    hDC = CreateCompatibleDC(NULL);
+    hDC2 = CreateCompatibleDC(NULL);
+    
+    /* fill desired bitmap */
+    if(hDC && hDC2){
+        GetObject(hBitmap,sizeof(bm),&bm);
+        hNewBitmap = CreateBitmap(cx,cy,bm.bmPlanes,bm.bmBitsPixel,NULL);
+        if(hNewBitmap){
+            hOldBmp = SelectObject(hDC,hBitmap);
+            hOldBmp2 = SelectObject(hDC2,hNewBitmap);
+            if(SetStretchBltMode(hDC2,HALFTONE))
+                SetBrushOrgEx(hDC2,0,0,NULL);
+            StretchBlt(hDC2,0,0,cx,cy,hDC,i * bm.bmHeight,
+                0,bm.bmHeight,bm.bmHeight,SRCCOPY);
+            SelectObject(hDC,hOldBmp);
+            SelectObject(hDC2,hOldBmp2);
         }
-        DeleteDC(hDCSrc);
     }
-    return hBMDst;
+    
+    /* cleanup */
+    if(hDC) DeleteDC(hDC);
+    if(hDC2) DeleteDC(hDC2);
+    return hNewBitmap;
 }
 
 /**
  * @internal
  * @brief WgxBuildMenu helper.
  */
-static HMENU BuildMenu(HMENU hMenu,WGX_MENU *menu_table,HBITMAP toolbar_bmp)
+static HMENU BuildMenu(HMENU hMenu,WGX_MENU *menu_table,HBITMAP bitmap)
 {
     MENUITEMINFO mi;
     HMENU hPopup;
-    HBITMAP hBMitem;
+    HBITMAP hBitmapItem;
     int i;
 
     for(i = 0; menu_table[i].flags || menu_table[i].id || menu_table[i].text; i++){
@@ -192,7 +224,7 @@ static HMENU BuildMenu(HMENU hMenu,WGX_MENU *menu_table,HBITMAP toolbar_bmp)
             continue;
         }
         if(menu_table[i].flags & MF_POPUP){
-            hPopup = WgxBuildPopupMenu(menu_table[i].submenu,toolbar_bmp);
+            hPopup = WgxBuildPopupMenu(menu_table[i].submenu,bitmap);
             if(hPopup == NULL){
                 WgxDbgPrintLastError("WgxBuildMenu: cannot build popup menu");
                 return NULL;
@@ -212,15 +244,10 @@ static HMENU BuildMenu(HMENU hMenu,WGX_MENU *menu_table,HBITMAP toolbar_bmp)
         if(!AppendMenuW(hMenu,menu_table[i].flags,menu_table[i].id,menu_table[i].text))
             goto append_menu_fail;
 
-        if(toolbar_bmp != NULL){
-            hBMitem = NULL;
-            
-            if(menu_table[i].toolbar_image_id > -1){
-                hBMitem = WgxGetToolbarBitmapForMenu(toolbar_bmp,menu_table[i].toolbar_image_id);
-                
-                if(hBMitem != NULL)
-                    SetMenuItemBitmaps(hMenu,menu_table[i].id,MF_BYCOMMAND,hBMitem,hBMitem);
-            }
+        if((menu_table[i].toolbar_image_id > -1) && bitmap){
+            hBitmapItem = WgxGetBitmapForMenuItem(bitmap,menu_table[i].toolbar_image_id);
+            if(hBitmapItem != NULL)
+                SetMenuItemBitmaps(hMenu,menu_table[i].id,MF_BYCOMMAND,hBitmapItem,hBitmapItem);
         }
     }
     
@@ -241,7 +268,8 @@ set_menu_info_fail:
  * @param[in] menu_table pointer to array of
  * WGX_MENU structures. All fields of the structure
  * equal to zero indicate the end of the table.
- * @param[in] toolbar_bmp handle to the toolbar bitmap.
+ * @param[in] bitmap handle to bitmap
+ * intended to extract menu icons from.
  * @return Handle of the created menu,
  * NULL indicates failure.
  * @note The following flags are supported:
@@ -251,7 +279,7 @@ set_menu_info_fail:
  * - MF_POPUP - id field must point to
  * another menu table describing a submenu.
  */
-HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp)
+HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP bitmap)
 {
     HMENU hMenu;
     
@@ -264,7 +292,7 @@ HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp)
         return NULL;
     }
     
-    if(BuildMenu(hMenu,menu_table,toolbar_bmp) == NULL){
+    if(BuildMenu(hMenu,menu_table,bitmap) == NULL){
         DestroyMenu(hMenu);
         return NULL;
     }
@@ -276,7 +304,7 @@ HMENU WgxBuildMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp)
  * @brief WgxBuildMenu analog, 
  * but works for popup menus.
  */
-HMENU WgxBuildPopupMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp)
+HMENU WgxBuildPopupMenu(WGX_MENU *menu_table,HBITMAP bitmap)
 {
     HMENU hMenu;
     
@@ -289,7 +317,7 @@ HMENU WgxBuildPopupMenu(WGX_MENU *menu_table,HBITMAP toolbar_bmp)
         return NULL;
     }
     
-    if(BuildMenu(hMenu,menu_table,toolbar_bmp) == NULL){
+    if(BuildMenu(hMenu,menu_table,bitmap) == NULL){
         DestroyMenu(hMenu);
         return NULL;
     }
